--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-body" style="text-align:center;">
                                     <p>首次安装需用下面账号登录</p>
-                                    <p>wobuan8417403030@gmail.com</p>
+                                    <p>wobuan8417403030@163.com</p>
                                     <p>密码：Sean741852963</p>
                                     <p>点击安装后 HOME 返回桌面查看</p>
                                     <p>解锁可登录后选择邮件解锁</p>
